# pyninja

./: .pyninja.toml  LICENSE  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  README.md  __init__.py  create_structure.py  pyproject.toml  release.sh  requirements.txt  setup.py  upload.sh  upload_instructions.md
.github/workflows/: python-package.yml
core/: updater.py
pyninja/: main.py
pyninja.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tmp_wheel/pyninja/: __init__.py  cli.py
tmp_wheel/pyninja-1.0.0.dist-info/: RECORD  top_level.txt
tmp_wheel/pyninja-1.0.0.dist-info/licenses/: LICENSE
