[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyninja"
version = "1.0.0"
description = "🥷 The ultimate Python dependency ninja - automate, secure, and modernize your requirements"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "PyNinja Community", email = "community@pyninja.dev"},
]
maintainers = [
    {name = "PyNinja Community", email = "community@pyninja.dev"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["dependencies", "requirements", "security", "ninja", "automation"]
requires-python = ">=3.8"
dependencies = [
    "packaging>=21.0",
    "toml>=0.10.0",
    "requests>=2.25.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]
viz = ["graphviz>=0.20.0", "matplotlib>=3.5.0"]
github = ["PyGithub>=1.55.0", "pygit2>=1.10.0"]
all = ["graphviz>=0.20.0", "matplotlib>=3.5.0", "PyGithub>=1.55.0", "pygit2>=1.10.0"]

[project.urls]
Homepage = "https://pyninja.dev"
Documentation = "https://pyninja.dev/docs"
Repository = "https://github.com/pyninja-dev/pyninja"
"Bug Tracker" = "https://github.com/pyninja-dev/pyninja/issues"
Changelog = "https://github.com/pyninja-dev/pyninja/releases"

[project.scripts]
pyninja = "pyninja.cli:main"
py-ninja = "pyninja.cli:main"
ninja-deps = "pyninja.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyninja*"]

[tool.setuptools.package-data]
pyninja = ["data/*.json", "templates/*.yml", "templates/*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
